Upgrade to Leaflet 1.3.1. Other small restructures

--- a/pyqtlet/web/map.html
+++ b/pyqtlet/web/map.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,13 +5,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Leaflet CSS -->
-        <link rel="stylesheet" href="modules/leaflet.css"/>
+        <link rel="stylesheet" href="modules/leaflet/leaflet.css"/>
     </head>
     <body style="margin: 0px">
         <div id="map" style="width: 100vw; height: 100vh;"></div>
-        <!-- Leaflet JS -->
-        <!--        <script src="modules/leaflet.js"></script>-->
-        <!-- Custom JS -->
-        <!--        <script src='map.js'></script> -->
     </body>
 </html>
+
