Restructure folder structure. Usage pattern has changed

--- a/pyqtlet/web/map.html
+++ b/pyqtlet/web/map.html
@@ -9,6 +9,9 @@
     </head>
     <body style="margin: 0px">
         <div id="map" style="width: 100vw; height: 100vh;"></div>
+        <!-- Leaflet JS -->
+        <script src='modules/leaflet/leaflet.js'></script>
+        <script src='map.js'></script>
     </body>
 </html>
 
