--- a/pyqtlet/web/map.html
+++ b/pyqtlet/web/map.html
@@ -6,11 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Leaflet CSS -->
         <link rel="stylesheet" href="modules/leaflet/leaflet.css"/>
+        <link rel="stylesheet" href="modules/leaflet.draw/leaflet.draw.css"/>
+        <!-- QWebChannel -->
+        <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
     </head>
     <body style="margin: 0px">
         <div id="map" style="width: 100vw; height: 100vh;"></div>
         <!-- Leaflet JS -->
         <script src='modules/leaflet/leaflet.js'></script>
+        <script src='modules/leaflet.draw/Leaflet.draw.js'></script>
+        <!-- Custom JS -->
+        <script src='map.js'></script>
     </body>
 </html>
 
