Add support for connecting events

--- a/pyqtlet/web/map.html
+++ b/pyqtlet/web/map.html
@@ -16,7 +16,7 @@
         <script src='modules/leaflet/leaflet.js'></script>
         <script src='modules/leaflet.draw/Leaflet.draw.js'></script>
         <!-- Custom JS -->
-        <script src='map.js'></script>
+        <script src='custom.js'></script>
     </body>
 </html>
 
