--- a/pyqtlet/web/map.html
+++ b/pyqtlet/web/map.html
@@ -14,7 +14,7 @@
         <div id="map" style="width: 100vw; height: 100vh;"></div>
         <!-- Leaflet JS -->
         <script src='modules/leaflet/leaflet.js'></script>
-        <script src='modules/leaflet.draw/Leaflet.draw.js'></script>
+        <script src='modules/leaflet.draw/leaflet.draw.js'></script>
         <!-- Custom JS -->
         <script src='custom.js'></script>
     </body>
