Prepare for version 0.2.1

--- a/pyqtlet/web/map.html
+++ b/pyqtlet/web/map.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Leaflet CSS -->
         <link rel="stylesheet" href="modules/leaflet/leaflet.css"/>
-        <link rel="stylesheet" href="modules/leaflet.draw/leaflet.draw.css"/>
+        <link rel="stylesheet" href="modules/leafletdraw/leaflet.draw.css"/>
         <!-- QWebChannel -->
         <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
     </head>
@@ -14,7 +14,7 @@
         <div id="map" style="width: 100vw; height: 100vh;"></div>
         <!-- Leaflet JS -->
         <script src='modules/leaflet/leaflet.js'></script>
-        <script src='modules/leaflet.draw/leaflet.draw.js'></script>
+        <script src='modules/leafletdraw/leaflet.draw.js'></script>
         <!-- Custom JS -->
         <script src='custom.js'></script>
     </body>
