--- a/pyqtlet2/web/map.html
+++ b/pyqtlet2/web/map.html
@@ -15,6 +15,7 @@
         <!-- Leaflet JS -->
         <script src='modules/leaflet_171/leaflet.js'></script>
         <script src='modules/leaflet_draw_414/dist/leaflet.draw.js'></script>
+        <script src='modules/leaflet_rotatedMarker_020/leaflet.rotatedMarker.js'></script>
         <!-- Custom JS -->
         <script src='custom.js'></script>
     </body>
